# cosi

./: .gitignore  pyproject.toml  sandbox_2.ipynb
config/: config_train.yaml
config/callbacks/: default.yaml
config/datamodule/: sol.yaml  sol_pmt.yaml
config/datamodule/local/: sol.yaml
config/datamodule/s3/: mums.yaml  sol.yaml
config/features/: jtfs.yaml
config/logger/: wandb.yaml
config/model/: autoencoder.yaml  supervised_sle_classifier.yaml
config/net/autoencoder/: conv.yaml
config/optim/: classifier.yaml  default.yaml
config/transform/: default.yaml
scripts/: train.py
src/: train.py  train_kubeflow.ipynb
src/callbacks/: eval.py  visualize.py
src/data/: datasets.py  modules.py
src/data/preprocess/: sol_encode_labels.py
src/features/: base.py  mel.py  scattering.py  spectral.py  temporal.py
src/models/: autoencoder.py
src/models/nets/: sle.py
src/models/nets/autoencoders/: base.py  conv.py
src/models/supervised/: classifier.py
src/models/supervised/nets/: sle.py
src/utils/: audio.py  callbacks.py  data.py
src/zzz_models/: autoencoder.py
src/zzz_models/nets/autoencoders/: base.py  conv.py
