[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cosi"
version = "0.1.0"
description = ""
authors = [
    { name="Farida Yusuf", email="f.yusuf@qmul.ac.uk" }
]
dependencies = [ "label-metric @ git+https://github.com/frdysf/label-metric.git"]

[project.urls]
# TODO: add URLs (e.g. GitHub, research page, prperint/publication)

[project.scripts]
train = "cosi.cli:train"
eval = "cosi.cli:eval"

[tool.setuptools.packages.find]
where = ["src"]
[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
cosi = { path = ".", editable = true }

[tool.pixi.tasks]
install-kernel = "python -m ipykernel install --user --name cosi --display-name cosi"

[tool.pixi.dependencies]
python = "3.11.*"
ipykernel = ">=6.30.1,<7"
pip = ">=25.2,<26"
umap-learn = ">=0.5.9.post2,<0.6"
