[project]
name = "cosi"
version = "0.1.0"
description = ""
authors = [
    { name="Farida Yusuf", email="f.yusuf@qmul.ac.uk" }
]
dependencies = ["viz @ git+https://github.com/frdysf/viz.git", "timbremetrics @ git+https://github.com/tiianhk/timbremetrics.git"]

[project.urls]

[project.scripts]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
cosi = { path = ".", editable = true }

[tool.pixi.tasks]
install-kernel = "python -m ipykernel install --user --name cosi --display-name cosi"

[tool.pixi.dependencies]
python = "3.11.*"
pytorch = ">=2.7.1,<3"
lightning = ">=2.5.5,<3"
torchaudio = ">=2.8.0,<3"
torchmetrics = ">=1.8.2,<2"
hydra-core = ">=1.3.2,<2"
omegaconf = ">=2.3.0,<3"
